<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ethercat_generic_mdp</name>
  <version>0.0.0</version>
  <description>Plugin implementations of generic EtherCAT Modular Device Profile</description>
  <maintainer email="hiwin_robot@hiwin.tw">HIWIN Technologies Corp</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ethercat_interface</depend>
  <depend>ethercat_generic_slave</depend>
  <depend>ethercat_generic_cia402_drive</depend>
  <depend>pluginlib</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
